--- a/BlazorTrainingApi/appsettings.json
+++ b/BlazorTrainingApi/appsettings.json
@@ -10,7 +10,7 @@
       },
       {
         "Name": "NorthwindConnectionString",
-        "ConnectionString": "server=.;Initial Catalog=NORTHWND;User ID=sa;Password=F8093F6CAEAFDDC975507D0EEBD760E4;",
+        "ConnectionString": "server=.;Initial Catalog=Northwind;User ID=sa;Password=F8093F6CAEAFDDC975507D0EEBD760E4;",
         "ProviderName": "System.Data.SqlClient",
         "KeywordForPassword": "Password"
       }
