--- a/BlazorTraining/wwwroot/appsettings.json
+++ b/BlazorTraining/wwwroot/appsettings.json
@@ -1,5 +1,5 @@
 {
   "R_ServiceUrlSection": {
-    "R_DefaultServiceUrl": "https://localhost:7141/"
+    "R_DefaultServiceUrl": "http://localhost:5066/"
   }
 }
