--- a/BlazorTrainingApi/Properties/launchSettings.json
+++ b/BlazorTrainingApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "BlazorTrainingApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7141;http://localhost:5066",
       "environmentVariables": {
