--- a/BlazorTraining/BlazorTraining.csproj
+++ b/BlazorTraining/BlazorTraining.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\Front\Front\SAB00900Front\SAB00900Front.csproj" />
     <ProjectReference Include="..\Front\Front\SAB01300Front\SAB01300Front.csproj" />
     <ProjectReference Include="..\Front\Front\SAB01400Front\SAB01400Front.csproj" />
+    <ProjectReference Include="..\SAB00100Front\SAB00100Front.csproj" />
   </ItemGroup>
 
   <ItemGroup>
