--- a/SAB00100Model/SAB00100Model.csproj
+++ b/SAB00100Model/SAB00100Model.csproj
@@ -10,6 +10,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="R_APIClient">
+      <HintPath>..\Dll Front\R_APIClient.dll</HintPath>
+    </Reference>
+    <Reference Include="R_APICommonDTO">
+      <HintPath>..\Dll Front\R_APICommonDTO.dll</HintPath>
+    </Reference>
+    <Reference Include="R_BlazorFrontEnd">
+      <HintPath>..\Dll Front\R_BlazorFrontEnd.dll</HintPath>
+    </Reference>
     <Reference Include="R_BusinessObjectFront">
       <HintPath>..\Dll Front\R_BusinessObjectFront.dll</HintPath>
     </Reference>
