--- a/Front/ViewModel/SAB00700Model/SAB00700Model.csproj
+++ b/Front/ViewModel/SAB00700Model/SAB00700Model.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="SAB00700Client.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Back\Common\SAB00700Common\SAB00700Common.csproj" />
   </ItemGroup>
 
