--- a/SAB00100Model/SAB00100Model.csproj
+++ b/SAB00100Model/SAB00100Model.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Back\Common\SAB00100Common\SAB00100Common.csproj" />
+    <ProjectReference Include="..\SAB00100FrontResources\SAB00100FrontResources.csproj" />
   </ItemGroup>
 
   <ItemGroup>
