--- a/SAB00100Front/SAB00100Front.csproj
+++ b/SAB00100Front/SAB00100Front.csproj
@@ -27,6 +27,9 @@
     <Reference Include="R_BlazorFrontEnd.Controls">
       <HintPath>..\Dll Front\R_BlazorFrontEnd.Controls.dll</HintPath>
     </Reference>
+    <Reference Include="R_CommonFrontBackAPI">
+      <HintPath>..\Dll Front\R_CommonFrontBackAPI.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
