--- a/BlazorTrainingApi/BlazorTrainingApi.csproj
+++ b/BlazorTrainingApi/BlazorTrainingApi.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\Back\Controller\SAB00700Controller\SAB00700Controller.csproj" />
     <ProjectReference Include="..\Back\Controller\SAB00900Controller\SAB00900Controller.csproj" />
     <ProjectReference Include="..\Back\Controller\SAB01300Controller\SAB01300Controller.csproj" />
+    <ProjectReference Include="..\SAB00400Controller\SAB00400Controller.csproj" />
   </ItemGroup>
 
   <ItemGroup>
