--- a/SAB00400Controller/SAB00400Controller.csproj
+++ b/SAB00400Controller/SAB00400Controller.csproj
@@ -22,6 +22,9 @@
     <Reference Include="R_APICommon">
       <HintPath>..\Dll Back\R_APICommon.dll</HintPath>
     </Reference>
+    <Reference Include="R_APICommonDTO">
+      <HintPath>..\Dll Back\R_APICommonDTO.dll</HintPath>
+    </Reference>
     <Reference Include="R_CommonFrontBackAPI">
       <HintPath>..\Dll Back\R_CommonFrontBackAPI.dll</HintPath>
     </Reference>
